--- a/src/Map.css
+++ b/src/Map.css
@@ -2,9 +2,13 @@
   position: absolute;
   top: 0;
   bottom: 0;
-  left: 0;
-  right: 32%;
-}
+  left: 15%;
+  margin: auto;
+  height: 500px; 
+  width: 40%;
+  /* height: 600px; */
+  /* width: 750px; */
+  }
 
 .sidebarStyle {
   display: inline-block;
@@ -41,21 +45,20 @@ table, tr, td {
 background: #fff;
 position: absolute;
 z-index: 1;
-top: 10px;
-right: 10px;
+/* right: 10px; */
 border-radius: 3px;
-width: 120px;
+/* width: 120px; */
 border: 1px solid rgba(0, 0, 0, 0.4);
 font-family: 'Open Sans', sans-serif;
 }
  
 #menu a {
-font-size: 13px;
+font-size: 20px;
 color: #404040;
 display: block;
 margin: 0;
 padding: 0;
-padding: 10px;
+width: 100%;
 text-decoration: none;
 border-bottom: 1px solid rgba(0, 0, 0, 0.25);
 text-align: center;
@@ -71,10 +74,11 @@ color: #404040;
 }
  
 #menu a.active {
-background-color: #3887be;
-color: #ffffff;
+background-color: #ffffff;
+color: #000000;
 }
  
 #menu a.active:hover {
-background: #3074a4;
+background: #c71616;
+color: #ffffff;
 }
